<resources>
    <string name="app_name">Encuesta</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texto_si">Sí</string>
    <string name="texto_no">No</string>
    <string name="texto_nosabe">NO SABE</string>
    <string name="texto_otroP1">Otro?</string>
    <string name="texto_otroP2">¿Otro?</string>
    <string name="texto_otroN">Otro</string>
    <string name="texto_especifique">Especifique</string>
    <string name="texto_al">AL</string>
    <string name="texto_informante">INFORMANTE N°:</string>
    <string name="texto_nombre">NOMBRE:</string>
    <string name="texto_observaciones">OBSERVACIONES:</string>
    <string name="texto_ninguna">NINGUNA</string>
    <string name="capitulo100">CAPÍTULO 100: DATOS DE LA VIVIENDA (Jefe/a del hogar o persona de 18 y más años de edad)</string>
    <string name="capitulo200">CAPÍTULO 200: CARACTERÍSTICAS DE LOS RESIDENTES HABITUALES DEL HOGAR (Jefe/a del hogar o persona de 18 y más años de edad)</string>
    <string name="capitulo300">CAPÍTULO 300: CARACTERÍSTICAS GENERALES DE LA PERSONA SELECCIONADA</string>
    <string name="cap300_discapacidad">DISCAPACIDAD</string>
    <string name="cap300_pregunta1">1.¿TIENE USTED LIMITACIONES DE FORMA PERMANENTE, PARA:</string>
    <string name="c300p1_rpta1">1.Moverse o caminar para usar brazos o piernas?</string>
    <string name="c300p1_rpta2">2.Ver, aun usando anteojos?</string>
    <string name="c300p1_rpta3">3.Hablar o comunicarse, aun usando el lenguaje de señas u otro?</string>
    <string name="c300p1_rpta4">4.Oír, aun usando audífonos?</string>
    <string name="c300p1_rpta5">5.Entender o aprender, concentrarse y recordar?</string>
    <string name="c300p1_rpta6">6.Relacionarse con los demás, por sus pensamientos, sentimientos, emociones o conductas?</string>
    <string name="cap300_educacion">EDUCACIÓN</string>
    <string name="cap300_pregunta2">2.¿CUÁL ES EL ÚLTIMO AÑO DE ESTUDIOS O GRADO QUE APROBÓ</string>
    <string name="cap300_pregunta3">3.ACTUALMENTE, ¿ASISTE A ALGUNA INSTITUCIÓN O PROGRAMA DE EDUCACIÓN BÁSICA (INICIAL, PRIMARIA O SECUNDARIA)?</string>
    <string name="cap300_autoidentificacion">AUTOIDENTIFICACIÓN ÉTNICA</string>
    <string name="cap300_pregunta4">4.¿CUÁL ES EL IDIOMA O LENGUA MATERNA QUE APRENDIÓ EN SU NIÑEZ:</string>
    <string name="c300p4_rpta1">Quechua?</string>
    <string name="c300p4_rpta2">Aymara?</string>
    <string name="c300p4_rpta3">Otra lengua nativa?</string>
    <string name="c300p4_rpta4">Castellano?</string>
    <string name="c300p4_rpta5">Portugués?</string>
    <string name="c300p4_rpta6">Otra lengua extranjera?</string>
    <string name="c300p4_rpta7">ES SORDOMUDO/A</string>
    <string name="cap300_pregunta5">5.POR SUS ANTEPASADOS Y DE ACUERDO A SUS COSTUMBRES, ¿USTED SE CONSIDERA:</string>
    <string name="c300p5_rpta1">Quechua?</string>
    <string name="c300p5_rpta2">Aymara?</string>
    <string name="c300p5_rpta3">Nativo o Indígena de la Amazonía?</string>
    <string name="c300p5_rpta4">Negro / Mulato / Zambo / Afro peruano?</string>
    <string name="c300p5_rpta5">Blanco?</string>
    <string name="c300p5_rpta6">Mestizo?</string>
    <string name="cap300_pregunta6">6.¿USTED PERTENECE O SE CONSIDERA PARTE DE UN PUEBLO INDÍGENA?</string>
    <string name="cap300_pregunta7">7.¿A QUÉ PUEBLO INDÍGENA PERTENECE?</string>
    <string name="cap300_condicion">CONDICION DE ACTIVIDAD (OCUPADOS Y DESOCUPADOS)</string>
    <string name="cap300_pregunta8_1">8.LA SEMANA PASADA DEL </string>
    <string name="cap300_pregunta8_2">¿USTED, TUVO ALGÚN TRABAJO, SIN CONTAR LOS QUEHACERES DEL HOGAR?</string>
    <string name="cap300_pregunta9_1">9.AUNQUE NO TRABAJÓ LA SEMANA PASADA DEL </string>
    <string name="cap300_pregunta9_2">¿TIENE ALGÚN EMPLEO FIJO AL QUE PROXIMAMENTE VOLVERÁ?</string>
    <string name="cap300_pregunta10_1">10.AUNQUE NO TRABAJÓ LA SEMANA PASADA DEL </string>
    <string name="cap300_pregunta10_2">¿TIENE ALGÚN NEGOCIO PROPIO AL QUE PROXIMAMENTE VOLVERÁ?</string>
    <string name="cap300_pregunta11_1">11.LA SEMANA PASADA DEL </string>
    <string name="cap300_pregunta11_2">¿REALIZÓ ALGUNA ACTIVIDAD AL MENOS UNA HORA PARA OBTENER INGRESOS EN DINERO O EN ESPECIE, COMO:</string>
    <string name="c300p11_rpta1">1.Trabajando en algún negocio propio o de un familiar? </string>
    <string name="c300p11_rpta2">2.Ofreciendo algún servicio?</string>
    <string name="c300p11_rpta3">3.Haciendo algo en casa para vender?</string>
    <string name="c300p11_rpta4">4.Vendiendo productos de belleza, ropa, joyas, etc.?</string>
    <string name="c300p11_rpta5">5.Haciendo prácticas pagadas en un centro de trabajo?</string>
    <string name="c300p11_rpta6">6.Trabajando para un hogar particular?</string>
    <string name="c300p11_rpta7">7.Fabricando algún producto?</string>
    <string name="c300p11_rpta8">8.Realizando labores remuneradas en la chacra o cuidado de animales?</string>
    <string name="c300p11_rpta9">9.Ayudando a un familiar sin remuneración?</string>
    <string name="cap300_ocupados">OCUPADOS</string>
    <string name="cap300_pregunta12_1">12.LA SEMANA PASADA DEL </string>
    <string name="cap300_pregunta12_2">¿A QUÉ ACTIVIDAD SE DEDICÓ EL NEGOCIO, ORGANISMO O EMPRESA EN LA QUE TRABAJÓ?</string>
    <string name="c300p12_rpta1">Agrícola</string>
    <string name="c300p12_rpta2">Pecuaria</string>
    <string name="c300p12_rpta3">Forestal</string>
    <string name="c300p12_rpta4">Pesquera</string>
    <string name="c300p12_rpta5">Minera</string>
    <string name="c300p12_rpta6">Artesanal</string>
    <string name="c300p12_rpta7">Comercial</string>
    <string name="c300p12_rpta8">Servicios</string>
    <string name="c300p12_rpta9">Estado (Gobierno)</string>
    <string name="cap300_pregunta13">13.USTED SE DESEMPEÑÓ EN SU OCUPACIÓN PRINCIPAL O NEGOCIO COMO:</string>
    <string name="c300p13_rpta1">¿Empleador o patrono?</string>
    <string name="c300p13_rpta2">¿Trabajador independiente?</string>
    <string name="c300p13_rpta3">¿Empleado?</string>
    <string name="c300p13_rpta4">¿Obrero?</string>
    <string name="c300p13_rpta5">¿Trabajador familiar no remunerado?</string>
    <string name="c300p13_rpta6">¿Trabajador del hogar?</string>
    <string name="cap300_pregunta14">14.EN SUS OCUPACIONES, ¿CUÁL FUE SU INGRESO EN EL MES ANTERIOR?</string>
    <string name="c300p14_monetario">Monetario</string>
    <string name="c300p14_especie">En especie</string>
    <string name="c300p14_enteros">Soles (En enteros)</string>
    <string name="cap300_desocupados">DESOCUPADOS</string>
    <string name="cap300_pregunta15_1">15.LA SEMANA PASADA DEL </string>
    <string name="cap300_pregunta15_2">¿USTED, QUERÍA TRABAJAR?</string>
    <string name="cap300_pregunta16_1">16.LA SEMANA PASADA DEL </string>
    <string name="cap300_pregunta16_2">¿ESTUVO DISPONIBLE PARA TRABAJAR?</string>
    <string name="cap300_pregunta17_1">17.LA SEMANA PASADA DEL </string>
    <string name="cap300_pregunta17_2">¿HIZO ALGO PARA CONSEGUIR TRABAJO?</string>
    <string name="cap300_pregunta18">18.¿CUÁNTAS SEMANAS HA ESTADO BUSCANDO TRABAJO SIN INTERRUPCIONES?</string>
    <string name="c300p18_numero_semanas">Número de semanas</string>
    <string name="capitulo400">CAPÍTULO 400: PERCEPCIÓN DE INSEGURIDAD (Persona seleccionada)</string>
    <string name="cap400_percepcion">PERCEPCIÓN DE INSEGURIDAD</string>
    <string name="cap400_percepcion_desc">Ahora, me gustaría hacerle algunas preguntas sobre las medidas de su seguridad personal y la de su entorno.</string>
    <string name="cap400_pregunta1">PERCEPCIÓN DE INSEGURIDAD</string>
    <string name="c400p1_rpta1">1.En su casa?</string>
    <string name="c400p1_rpta2">2.En su lugar de trabajo?</string>
    <string name="c400p1_rpta3">3.Caminando por la calle?</string>
    <string name="c400p1_rpta4">4.En su institución educativa?</string>
    <string name="c400p1_rpta5">5.En el mercado?</string>
    <string name="c400p1_rpta6">6.En el centro comercial?</string>
    <string name="c400p1_rpta7">7.En el banco?</string>
    <string name="c400p1_rpta8">8.En el cajero automático?</string>
    <string name="c400p1_rpta9">9.En el parque?</string>
    <string name="c400p1_rpta10">10.En el transporte público?</string>
    <string name="c400p1_rpta11">11.En un vehículo propio?</string>
    <string name="c400p1_cod1">Muy Inseguro?</string>
    <string name="c400p1_cod2">Inseguro??</string>
    <string name="c400p1_cod3">Seguro</string>
    <string name="c400p1_cod4">Muy seguro?</string>
    <string name="c400p1_cod5">NO APLICA</string>
    <string name="cap400_pregunta2">¿QUÉ TAN SEGURO SE SIENTE CAMINANDO EN SU ZONA O BARRIO DE NOCHE Y SOLO:</string>
    <string name="c400p2_rpta1">Muy inseguro?</string>
    <string name="c400p2_rpta2">Inseguro?</string>
    <string name="c400p2_rpta3">Seguro?</string>
    <string name="c400p2_rpta4">Muy seguro?</string>
    <string name="cap400_pregunta3">¿SABE O A ESCUCHADO SI EN LOS ALREDEDORES DE SU VIVIENDA SUCEDEN O HAN SUCEDIDO LAS SIGUIENTES SITUACIONES DURANTE LOS ÚLTIMOS 12 MESES, ES DECIR ENTRE JUN 15 Y MAY 16.</string>
    <string name="c400p3_rpta1">¿Riñas o peleas en la calle?</string>
    <string name="c400p3_rpta2">¿Reuniones de pandillas o bandas?</string>
    <string name="c400p3_rpta3">¿Venta de productos falsificados?</string>
    <string name="c400p3_rpta4">¿Consumo de bebidas alcohólicas en la calle?</string>
    <string name="c400p3_rpta5">¿Venta clandestina de alcohol?</string>
    <string name="c400p3_rpta6">¿Consumo de droga en la calle?</string>
    <string name="c400p3_rpta7">¿Venta de droga en la calle?</string>
    <string name="c400p3_rpta8">¿Vandalismo?</string>
    <string name="c400p3_rpta9">¿Calles sin iluminación?</string>
    <string name="c400p3_rpta10">¿Prostitución?</string>
    <string name="c400p3_rpta11">¿Disparos frecuentes?</string>
    <string name="cap400_pregunta4">EN LOS PRÓXIMOS 12 MESES DE JUL 16 Y JUN 17, ¿USTED CREE QUE PODRÍA SER VÍCTIMA DE ALGÚN HECHO DELICTIVO POR EL TIPO DE ACTIVIDADES QUE REALIZA O EN LOS LUGARES POR LOS QUE TRANSITA NORMALMENTE?</string>
    <string name="cap400_pregunta5">¿DE CUÁL HECHO DELICTIVO?</string>
    <string name="c400p5_rpta1">Robo de vehículo automotor</string>
    <string name="c400p5_rpta2">Robo de vivienda</string>
    <string name="c400p5_rpta3">Robo sin violencia de sus objetos personales (cartera,mochila, celular)</string>
    <string name="c400p5_rpta4">Robo con violencia de sus objetos personales (cartera,mochila, celular)</string>
    <string name="c400p5_rpta5">Fraude bancario</string>
    <string name="c400p5_rpta6">Estafa (fraude al consumidor)</string>
    <string name="c400p5_rpta7">Vandalismo</string>
    <string name="c400p5_rpta8">Amenaza</string>
    <string name="c400p5_rpta9">Extorsión</string>
    <string name="c400p5_rpta10">Corrupción</string>
    <string name="c400p5_rpta11">Agresión verbal</string>
    <string name="c400p5_rpta12">Agresión física</string>
    <string name="c400p5_rpta13">Agresión sexual</string>
    <string name="c400p5_rpta14">Secuestro</string>
    <string name="cap400_pregunta6">EN COMPARACIÓN CON LOS ÚLTIMOS 12 MESES DE JUN 15 Y MAY 16, ¿USTED, DIRÍA QUE LA DELINCUENCIA:</string>
    <string name="c400p6_rpta1">1.En su barrio</string>
    <string name="c400p6_rpta2">2.En su distrito, pero no en su barrio</string>
    <string name="c400p6_rpta3">3.En su provincia</string>
    <string name="c400p6_rpta4">4.En su departamento</string>
    <string name="c400p6_rpta5">5.En su país</string>
    <string name="c400p6_cod1">Ha disminuido?</string>
    <string name="c400p6_cod2">Se mantiene igual?</string>
    <string name="c400p6_cod3">Ha aumentado?</string>
    <string name="cap400_medidas">MEDIDAS DE SEGURIDAD</string>
</resources>