<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pe.gob.inei.encuesta.fragments.capitulo400.C400F1Fragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin">
            <TextView
                android:layout_marginBottom="@dimen/layout_margin"
                android:padding="10dp"
                android:textColor="@color/icons"
                android:textStyle="bold"
                android:textSize="@dimen/textoMedium"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/capitulo300"
                />
            <LinearLayout
                android:layout_marginBottom="@dimen/pregunta_margin"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_informante"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/icons"
                    />
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="01"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/cajas_de_texto"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_nombre"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:textColor="@color/icons"
                    android:background="@color/colorPrimary"
                    />
                <TextView
                    android:layout_weight="6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Denis Ricardo Morales Retamozo"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:background="@drawable/cajas_de_texto"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cap300_discapacidad"
                    android:padding="5dp"
                    android:layout_marginBottom="@dimen/pregunta_margin"
                    android:gravity="center"
                    android:background="@color/accent"
                    android:textColor="@color/icons"/>
                <LinearLayout
                    android:id="@+id/cap300_pregunta1"
                    android:padding="5dp"
                    android:background="@drawable/cajas_de_texto"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/pregunta_margin"
                    >
                    <TextView
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cap300_pregunta1"
                        />
                    <LinearLayout
                        android:layout_marginLeft="20dp"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_gravity="center_vertical"
                            android:text="@string/c300p1_rpta1"
                            android:layout_weight="2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                        <RadioGroup
                            android:layout_gravity="center_vertical"
                            android:orientation="horizontal"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">
                            <RadioButton
                                android:layout_weight="1"
                                android:text="@string/texto_si"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>
                            <RadioButton
                                android:layout_weight="1"
                                android:text="@string/texto_no"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>
                        </RadioGroup>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginLeft="20dp"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_gravity="center_vertical"
                            android:text="@string/c300p1_rpta2"
                            android:layout_weight="2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                        <RadioGroup
                            android:layout_gravity="center_vertical"
                            android:orientation="horizontal"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">
                            <RadioButton
                                android:layout_weight="1"
                                android:text="@string/texto_si"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>
                            <RadioButton
                                android:layout_weight="1"
                                android:text="@string/texto_no"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>
                        </RadioGroup>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginLeft="20dp"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_gravity="center_vertical"
                            android:text="@string/c300p1_rpta3"
                            android:layout_weight="2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                        <RadioGroup
                            android:layout_gravity="center_vertical"
                            android:orientation="horizontal"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">
                            <RadioButton
                                android:layout_weight="1"
                                android:text="@string/texto_si"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>
                            <RadioButton
                                android:layout_weight="1"
                                android:text="@string/texto_no"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>
                        </RadioGroup>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginLeft="20dp"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_gravity="center_vertical"
                            android:text="@string/c300p1_rpta4"
                            android:layout_weight="2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                        <RadioGroup
                            android:layout_gravity="center_vertical"
                            android:orientation="horizontal"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">
                            <RadioButton
                                android:layout_weight="1"
                                android:text="@string/texto_si"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>
                            <RadioButton
                                android:layout_weight="1"
                                android:text="@string/texto_no"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>
                        </RadioGroup>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginLeft="20dp"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_gravity="center_vertical"
                            android:text="@string/c300p1_rpta5"
                            android:layout_weight="2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                        <RadioGroup
                            android:layout_gravity="center_vertical"
                            android:orientation="horizontal"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">
                            <RadioButton
                                android:layout_weight="1"
                                android:text="@string/texto_si"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>
                            <RadioButton
                                android:layout_weight="1"
                                android:text="@string/texto_no"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>
                        </RadioGroup>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginLeft="20dp"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_gravity="center_vertical"
                            android:text="@string/c300p1_rpta6"
                            android:layout_weight="2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                        <RadioGroup
                            android:layout_gravity="center_vertical"
                            android:orientation="horizontal"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">
                            <RadioButton
                                android:layout_weight="1"
                                android:text="@string/texto_si"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>
                            <RadioButton
                                android:layout_weight="1"
                                android:text="@string/texto_no"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>
                        </RadioGroup>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
